# gregorio-lsp

./: .eslintrc.json  .gitignore  AGENTS.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  PROJECT_COMPLETE.md  PROJECT_FILES.md  QUICKSTART.md  README.md  SUMMARY.md  flake.nix  package-lock.json  package.json  project-tree.txt  test_range.mjs  test_tokenize.mjs  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.zed/: settings.json
crates/gregorio-cli/: Cargo.toml
crates/gregorio-core/: Cargo.toml
crates/gregorio-core/src/: format.rs  lib.rs  note_ops.rs
crates/gregorio-core/src/parser/: nabc.rs  types.rs
crates/gregorio-core/src/validation/: mod.rs  semantic.rs  validator.rs
crates/gregorio-server/: Cargo.toml
crates/gregorio-server/src/: main.rs
crates/gregorio-wasm/: Cargo.toml
crates/gregorio-wasm/src/: lib.rs
docs/: API.md  DEVELOPMENT.md
examples/: README.md  errors-example.gabc  prefacio.gabc
scripts/: build.sh  postinstall.js
src/: format.rs  lib.rs  lint.rs  lint.ts  note_ops.rs  server.ts  transpose.rs  tree_sitter_integration.rs
src/__tests__/: gabc-parser-corpus.test.ts  gabc-parser.test.ts  nabc-parser.test.ts  semantic-analyzer.test.ts  validation-rules.test.ts
src/parser/: gabc-parser.ts  gabc.rs  mod.rs  nabc-parser.ts  nabc.rs  tree-sitter-integration.ts  types.rs  types.ts
src/validation/: README.md  rules.rs  rules.ts  semantic-analyzer.ts  semantic.rs
tests/: corpus.rs  format.rs  gabc_advanced.rs  gabc_parser.rs  leaning_indicators.rs  nabc_parser.rs  note_ops.rs  oriscus_leaning.rs  transpose.rs  validation.rs
