[package]
name = "gregorio-lsp"
version = "0.2.0"
edition = "2021"
authors = ["AISC Gre-BR"]
description = "Language Server Protocol implementation for Gregorio GABC/NABC notation files"
license = "MIT"
keywords = ["lsp", "language-server", "gabc", "nabc", "gregorio"]
categories = ["text-editors", "parser-implementations"]
repository = "https://github.com/aiscgre-br/gregorio-lsp"
readme = "README.md"

[lib]
name = "gregorio_lsp"
path = "src/lib.rs"

[[bin]]
name = "gregorio-lsp"
path = "src/bin/server.rs"

[[bin]]
name = "gregolint"
path = "src/bin/lint.rs"

[features]
default = []
tree-sitter = ["dep:tree-sitter", "dep:tree-sitter-gregorio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"

# LSP server stack
tokio = { version = "1.36", features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync"] }
tower-lsp = "0.20"
log = "0.4"
env_logger = "0.11"

# Optional tree-sitter support
tree-sitter = { version = "0.20", optional = true }
tree-sitter-gregorio = { path = "../tree-sitter-gregorio", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
