[package]
name = "gregorio-core"
version = "0.11.0"
edition = "2021"
authors = ["AISCGre Brasil"]
description = "Core GABC/NABC parser, validator, formatter and transformations for Gregorio tooling"
license = "MIT"
keywords = ["gabc", "nabc", "gregorio", "parser"]
categories = ["text-editors", "parser-implementations"]
repository = "https://github.com/aiscgre-br/gregorio-lsp"

[lib]
name = "gregorio_core"
path = "src/lib.rs"

[features]
default = []
# Optional tree-sitter support. Disabled for WASM targets (requires C toolchain).
tree-sitter = ["dep:tree-sitter", "dep:tree-sitter-gregorio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"

tree-sitter = { version = "~0.22", optional = true }
tree-sitter-gregorio = { git = "https://github.com/aiscgre-br/tree-sitter-gregorio", tag = "v0.5.2", optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
