[package]
name = "gregorio-server"
version = "0.11.0"
edition = "2021"
authors = ["AISCGre Brasil"]
description = "LSP server binary for Gregorio GABC/NABC (tower-lsp over stdio)"
license = "MIT"
repository = "https://github.com/aiscgre-br/gregorio-lsp"

[[bin]]
name = "gregorio-lsp"
path = "src/main.rs"

[features]
default = []
tree-sitter = ["dep:tree-sitter", "gregorio-core/tree-sitter"]

[dependencies]
gregorio-core = { path = "../gregorio-core" }
serde_json = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "io-std", "io-util", "macros", "sync"] }
tower-lsp = "0.20"
log = "0.4"
env_logger = "0.11"

tree-sitter = { version = "~0.22", optional = true }
