[package]
name = "gregorio-wasm"
version = "0.11.0"
edition = "2021"
authors = ["AISCGre Brasil"]
description = "WASM bindings for gregorio-core (in-process use by the VS Code extension)"
license = "MIT"
repository = "https://github.com/aiscgre-br/gregorio-lsp"

[lib]
name = "gregorio_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
gregorio-core = { path = "../gregorio-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
